將照片上傳

--- a/config/content.htm
+++ b/config/content.htm
@@ -360,4 +360,6 @@ doc["aitetris"].bind("click", aitetris.do)
 </tbody>
 </table>
 <p></p>
+<p><img alt="" height="435" src="/images/擷取.PNG" width="773"/></p>
+<p></p>
 <p></p>
