--- a/content/W8.html
+++ b/content/W8.html
@@ -154,6 +154,8 @@ img.add_border {
 </tbody>
 </table>
 <p></p>
+<p><img alt="" height="435" src="./../images/擷取.PNG" width="773"/></p>
+<p></p>
 <p></p><br />W7 << <a href='W7.html'>Previous</a> </div>
         
     <!-- footer -->
