--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -359,6 +359,7 @@ doc["aitetris"].bind("click", aitetris.do)
 </tr>
 </tbody>
 </table>
-<img alt="" height="435" src="/images/擷取.PNG" width="773"/>
+<p></p>
+<p><img alt="" height="435" src="/images/擷取.PNG" width="773"/></p>
 <p></p>
 <p></p>
