--- a/content/W8.html
+++ b/content/W8.html
@@ -154,7 +154,7 @@ img.add_border {
 </tbody>
 </table>
 <p></p>
-<p><img alt="" height="435" src="./../images/擷取.PNG" width="773"/></p>
+<p><img alt="" height="699" src="./../images/擷取2.PNG" width="1239"/></p>
 <p></p>
 <p></p><br />W7 << <a href='W7.html'>Previous</a> </div>
         
