--- a/content/W1.html
+++ b/content/W1.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='h2.html'>h2</a></li></ul><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w11.html'>w11</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='h2.html'>h2</a></li></ul><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w8.html'>w8</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX.html'>NX</a><li><a href='Onshape.html'>Onshape</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,10 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
+    <div id="tipue_search_content">每週進度 << <a href='每週進度.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
 <p>中秋節放假</p>
 <p></p>
-<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+<br />每週進度 << <a href='每週進度.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
         
     <!-- footer -->
       <div class="container">
