--- a/content/index.html
+++ b/content/index.html
@@ -129,7 +129,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='h2.html'>h2</a></li></ul><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w11.html'>w11</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='h2.html'>h2</a></li></ul><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w8.html'>w8</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX.html'>NX</a><li><a href='Onshape.html'>Onshape</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,6 +142,9 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='Brython.html'>Next</a> >> Brython<br /><h1>About</h1>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
+<p>倉儲連結:<a href="https://github.com/mdecad2022/site-41023118">https://github.com/mdecad2022/site-41023118</a></p>
+<p>網頁連結:<a href="https://mdecad2022.github.io/site-41023118/content/index.html">https://mdecad2022.github.io/site-41023118/content/index.html</a></p>
+<p></p>
 <br /> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
