--- a/content/w15.html
+++ b/content/w15.html
@@ -141,8 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w11</h1>
-<br />w8 << <a href='w8.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+    <div id="tipue_search_content">Onshape << <a href='Onshape.html'>Previous</a> <br /><h1>w15</h1><br />Onshape << <a href='Onshape.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
