--- a/content/w10.html
+++ b/content/w10.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='h2.html'>h2</a></li></ul><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w8.html'>w8</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX.html'>NX</a><li><a href='Onshape.html'>Onshape</a></li></ul><li class='has-children'><a href='w15.html'>w15</a><ul class='dropdown'><li><a href='Solvespace1.html'>Solvespace1</a><li><a href='onshape1.html'>onshape1</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='每週進度.html'>每週進度</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li class='has-children'><a href='W10.html'>W10</a><ul class='dropdown'><li><a href='h2.html'>h2</a></li></ul><li><a href='W11.html'>W11</a><li><a href='W12.html'>W12</a></li></ul><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w8.html'>w8</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX.html'>NX</a><li><a href='Onshape.html'>Onshape</a></li></ul><li class='has-children'><a href='w15.html'>w15</a><ul class='dropdown'><li><a href='Solvespace1.html'>Solvespace1</a><li><a href='onshape1.html'>onshape1</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,8 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w11</h1>
-<br />w8 << <a href='w8.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w10</h1>
+<div style="box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', system-ui, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Web', sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px;">已知 <a href="https://nfuedu.sharepoint.com/:u:/s/cad2022/EQTYcGymLWhJkYvzj94FNowBUzVx9Qaxn7nbtvZkdE1CUg?e=DJat7E" rel="noreferrer noopener" tabindex="-1" target="_blank" title="https://nfuedu.sharepoint.com/:u:/s/cad2022/eqtycgymlwhjkyvzj94fnowbuzvx9qaxn7nbtvzkde1cug?e=djat7e">block.prt</a> 中 p8=59, p9=44, 請利用網際表單, 將 p8, p9 都改為 50 之後, 在瀏覽中提供新的 block_new.prt 檔案下載, 並直接在網頁上展示該零件的 STL 格式檔案.</div>
+<p><a href="./../downloads/41023118.stl">/downloads/41023118.stl</a></p><br />w8 << <a href='w8.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
     <!-- footer -->
       <div class="container">
